objects/JobPositionAssignment.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDO_Golden_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</description>
        <inlineHelpText>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</inlineHelpText>
        <label>IDO Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDO_Record_Description__c</fullName>
        <description>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</description>
        <inlineHelpText>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</inlineHelpText>
        <label>IDO Record Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Duration__c</fullName>
        <formula>IF(AND(ISBLANK(ScheduledStartTime),ISBLANK(ScheduledEndTime)), 
AssignedPositionShift.EndTime - AssignedPositionShift.StartTime,
ScheduledEndTime-ScheduledStartTime)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is populated</inlineHelpText>
        <label>Scheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_motivated_you_to_Volunteer__c</fullName>
        <label>What motivated you to Volunteer?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Would_you_recommend__c</fullName>
        <label>Would you recommend this activity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Absent</fullName>
        <active>true</active>
        <description>If the volunteer is marked as Absent then the Actual Duration field must be set to 0 hours.</description>
        <errorConditionFormula>AND( ISPICKVAL(Status, &quot;Absent&quot;), ActualDuration   &lt;&gt;   0)</errorConditionFormula>
        <errorMessage>If the volunteer is marked as Absent then the Actual Duration field must be set to 0 hours.</errorMessage>
    </validationRules>
</CustomObject>